[package]
name = "ocidir"
description = "A Rust library for reading and writing OCI (opencontainers) layout directories"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/ocidir-rs"
keywords = ["oci", "opencontainers", "docker", "podman", "containers"]

[dependencies]
camino = "1.0.4"
chrono = "0.4.19"
olpc-cjson = "0.1.1"
cap-std-ext = "4.0"
flate2 = { features = ["zlib"], default-features = false, version = "1.0.20" }
hex = "0.4.3"
openssl = "0.10.33"
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
tar = "0.4.38"
thiserror = "1"
oci-spec = "0.7.0"
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
anyhow = "1.0.89"
gzp = { git = "https://github.com/tofay/gzp", branch = "borrowed-writer" }

[features]
zstd = ["dep:zstd"]
zstdmt = ["zstd", "zstd/zstdmt"]
