[package]
name = "ocidir"
description = "A Rust library for reading and writing OCI (opencontainers) layout directories"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/ocidir-rs"
keywords = ["oci", "opencontainers", "docker", "podman", "containers"]

[dependencies]
camino = "1.0.4"
chrono = "0.4.19"
cap-std-ext = "4.0"
flate2 = { features = ["zlib"], default-features = false, version = "1.0.20" }
hex = "0.4.3"
openssl = "0.10.33"
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
tar = "0.4.38"
thiserror = "2"
oci-spec = "0.8.0"
zstd = { version = "0.13.2", optional = true }
canon-json = "0.2.0"

[dev-dependencies]
anyhow = "=1.0.89"
cap-tempfile = "=3.3.0"

[features]
zstd = ["dep:zstd"]
zstdmt = ["zstd", "zstd/zstdmt"]
