[package]
name = "ocidir-cjson"
version = "0.0.0"
publish = false
description = "serde_json Formatter to serialize as OLPC-style canonical JSON (fork of olpc-cjson)"
#authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/ocidir-rs"
keywords = ["json"]
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
unicode-normalization = "0.1"

[dev-dependencies]
cap-std = "3.4.4"
serde_derive = "1"
sha2 = "0.10.9"
